<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hospital_home"
            android:title="@string/side_bar_home" />
        <item
            android:id="@+id/nav_hosp_addEvent"
            android:title="@string/side_bar_add_event" />
        <item
            android:id="@+id/nav_hosp_map"
            android:title="@string/side_bar_map" />

        <item
            android:id="@+id/nav_hosp_alert"
            android:title="@string/add_new_alert"
            />
    </group>
    <item
        android:id="@+id/sign_out"
        android:title="@string/side_bar_signout" />
</menu>