<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="gr.gdschua.bloodapp.Activities.HomeFragment"
        android:label="@string/side_bar_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_map"
        android:name="gr.gdschua.bloodapp.Activities.MapsFragment"
        android:label="@string/side_bar_map"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/nav_history"
        android:name="gr.gdschua.bloodapp.Activities.HistoryFragment"
        android:label="@string/my_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_leaderboard"
        android:name="gr.gdschua.bloodapp.Activities.LeaderboardFragment"
        android:label="@string/leaderboard"
        tools:layout="@layout/fragment_leaderboard" />

</navigation>